add command-line utility for remote application deployment (hot patch)

--- a/rebar.config
+++ b/rebar.config
@@ -7,4 +7,15 @@
    {feta, ".*",
       {git, "https://github.com/fogfish/feta", {branch, master}}
    }
+   
+  ,{getopt, ".*",
+      {git, "https://github.com/jcomellas/getopt.git", {branch, master}}
+   }
 ]}.
+
+{escript_incl_apps, [
+   feta
+  ,getopt
+]}.
+
+{escript_emu_args, "%%! +K true +P 10000000\n"}.
